changes related to relative paths within webapp

--- a/angular-dist/index.html
+++ b/angular-dist/index.html
@@ -11,5 +11,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="/csp/doje/runtime.js" defer></script><script src="/csp/doje/polyfills.js" defer></script><script src="/csp/doje/styles.js" defer></script><script src="/csp/doje/vendor.js" defer></script><script src="/csp/doje/main.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
